# snakegame

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  changelog.md  game_engine.cpp  game_engine.h  main_game.cpp  screen.cpp  screen.h  snake_game_logic.cpp  snake_game_logic.h
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build_cpp.yml  build_cpp_project.yml  super-linter.yml  super-linter.yml.bak
documententation/: project_documentation.md  project_documentation.md.bak
game_engine/screen/: screen.h
src/: CMakeLists.txt  main.cpp  main_game.cpp
src/MathLib/: CMakeLists.txt  MathLib.cpp  MathLib.h
src/MathLib/MathInterface/: math_interface.h
src/MathLib/MathSqrtLib/: CMakeLists.txt  MathSqrtLib.cpp  MathSqrtLib.h
src/MathLib/screen/: screen.cpp  screen.h
src/game_engine/: CMakeLists.txt  game_engine.cpp  game_engine.h
src/game_engine/game_logic/: CMakeLists.txt  snake_game_logic.cpp  snake_game_logic.h
src/game_engine/pattern/: CMakeLists.txt  pattern.h
src/game_engine/screen/: CMakeLists.txt  screen.cpp  screen.h
